
      \item There is a new function \code{assignInMyNamespace()} which
      uses the namespace of the function it is called from.

      \item \code{attach()} allows the default name for an attached file
      to be overridden.

      \item \code{bxp()}, the work horse of \code{boxplot()}, now uses a
      more sensible default \code{xlim} in the case where \code{at} is
      specified differently from \code{1:n}, see the dialogue on R-devel,
      \url{https://stat.ethz.ch/pipermail/r-devel/2011-November/062586.html}.

      \item new function \code{paste0()}, an efficient version of
      \code{paste(*, sep="")}, to be used in many places for more
      concise (and slightly more efficient) code.

      \item Function \code{setClass()} now returns, invisibly, a
      generator function for the new class, slightly preferred to
      calling \code{new()}, as explained in the \code{?setClass} documentation.
    }
  }

  \subsection{PACKAGE parallel}{
    \itemize{
      \item There is a new function \code{mcmapply()}, a parallel version
      of \code{mapply()}, and a wrapper \code{mcMap()}, a parallel
      version of \code{Map()}.

      \item A default cluster can be registered by the new function
      \code{setDefaultCluster()}: this will be used by default in
      functions such as \code{parLapply()}.

      \item \code{clusterMap()} has a new argument \code{.scheduling} to
      allow the use of load-balancing.

      \item There are new load-balancing functions \code{parLapplyLB()}
      and \code{parSapplyLB()}.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Non-ASCII vignettes without a declared encoding are no
      longer accepted.

      \item C/C++ code in packages is now compiled with \code{-NDEBUG}
      to mitigate against the C/C++ function \code{assert} being called
      in production use.  Developers can turn this off during package
      development with \code{PKG_CPPFLAGS = -UNDEBUG}.
